--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,8 @@ aiosignal==1.3.1
     # via aiohttp
 aleph-alpha-client==2.16.1
     # via -r requirements.in
+anyio==3.6.2
+    # via starlette
 async-timeout==4.0.2
     # via aiohttp
 attrs==22.2.0
@@ -34,21 +36,22 @@ charset-normalizer==3.1.0
     #   aiohttp
     #   requests
 click==8.1.3
-    # via pip-tools
-colorama==0.4.6
     # via
-    #   build
-    #   click
-    #   pytest
-    #   tqdm
+    #   pip-tools
+    #   uvicorn
 exceptiongroup==1.1.1
     # via pytest
+fastapi==0.95.0
+    # via -r requirements.in
 frozenlist==1.3.3
     # via
     #   aiohttp
     #   aiosignal
+h11==0.14.0
+    # via uvicorn
 idna==3.4
     # via
+    #   anyio
     #   requests
     #   yarl
 iniconfig==2.0.0
@@ -71,6 +74,8 @@ pycares==4.3.0
     # via aiodns
 pycparser==2.21
     # via cffi
+pydantic==1.10.7
+    # via fastapi
 pyproject-hooks==1.0.0
     # via build
 pytest==7.2.2
@@ -81,6 +86,10 @@ requests==2.28.2
     # via
     #   aleph-alpha-client
     #   openai
+sniffio==1.3.0
+    # via anyio
+starlette==0.26.1
+    # via fastapi
 tokenizers==0.13.2
     # via aleph-alpha-client
 tomli==2.0.1
@@ -92,10 +101,16 @@ tqdm==4.65.0
     # via
     #   -r requirements.in
     #   openai
+typing-extensions==4.5.0
+    # via
+    #   pydantic
+    #   starlette
 urllib3==1.26.15
     # via
     #   aleph-alpha-client
     #   requests
+uvicorn==0.21.1
+    # via -r requirements.in
 wheel==0.40.0
     # via pip-tools
 yarl==1.8.2
