--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ charset-normalizer==3.1.0
     #   requests
 click==8.1.3
     # via
+    #   duckduckgo-search
     #   pip-tools
     #   uvicorn
 colorama==0.4.6
@@ -48,6 +49,10 @@ colorama==0.4.6
     #   tqdm
 dataclasses-json==0.5.7
     # via langchain
+diskcache==5.6.1
+    # via duckduckgo-search
+duckduckgo-search==2.9.3
+    # via -r requirements.in
 exceptiongroup==1.1.1
     # via pytest
 fastapi==0.95.1
@@ -143,6 +148,7 @@ pyyaml==6.0
 requests==2.30.0
     # via
     #   aleph-alpha-client
+    #   duckduckgo-search
     #   langchain
     #   openai
 six==1.16.0
