--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,8 @@ certifi==2023.5.7
     # via requests
 cffi==1.15.1
     # via pycares
+cfgv==3.3.1
+    # via pre-commit
 charset-normalizer==3.1.0
     # via
     #   aiohttp
@@ -41,22 +43,20 @@ click==8.1.3
     #   duckduckgo-search
     #   pip-tools
     #   uvicorn
-colorama==0.4.6
-    # via
-    #   build
-    #   click
-    #   pytest
-    #   tqdm
 dataclasses-json==0.5.7
     # via langchain
 diskcache==5.6.1
     # via duckduckgo-search
+distlib==0.3.6
+    # via virtualenv
 duckduckgo-search==2.9.3
     # via -r requirements.in
 exceptiongroup==1.1.1
     # via pytest
 fastapi==0.95.1
     # via -r requirements.in
+filelock==3.12.0
+    # via virtualenv
 frozenlist==1.3.3
     # via
     #   aiohttp
@@ -65,6 +65,8 @@ greenlet==2.0.2
     # via sqlalchemy
 h11==0.14.0
     # via uvicorn
+identify==2.5.24
+    # via pre-commit
 idna==3.4
     # via
     #   anyio
@@ -90,6 +92,8 @@ multidict==6.0.4
     #   yarl
 mypy-extensions==1.0.0
     # via typing-inspect
+nodeenv==1.8.0
+    # via pre-commit
 numexpr==2.8.4
     # via langchain
 numpy==1.24.3
@@ -114,8 +118,12 @@ pillow==9.5.0
     #   python-pptx
 pip-tools==6.13.0
     # via -r requirements.in
+platformdirs==3.5.1
+    # via virtualenv
 pluggy==1.0.0
     # via pytest
+pre-commit==3.3.1
+    # via -r requirements.in
 pycares==4.3.0
     # via aiodns
 pycparser==2.21
@@ -144,7 +152,9 @@ python-pptx==0.6.21
 pytz==2023.3
     # via pandas
 pyyaml==6.0
-    # via langchain
+    # via
+    #   langchain
+    #   pre-commit
 requests==2.30.0
     # via
     #   aleph-alpha-client
@@ -190,6 +200,8 @@ urllib3==2.0.2
     #   requests
 uvicorn==0.22.0
     # via -r requirements.in
+virtualenv==20.23.0
+    # via pre-commit
 wheel==0.40.0
     # via pip-tools
 xlsxwriter==3.1.0
