--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,34 @@
+[tool.poetry]
+name = "neat-ai-assistant"
+version = "0.0.1"
+description = "An AI assistant that intellegently handles your data."
+authors = ["Niklas Finken <niklasfinken@me.com>"]
+license = "TBD"
+readme = "README.md"
+packages = [{include = "neat_ai_assistant"}]
+
+
+[tool.poetry.dependencies]
+python = "^3.11.4"
+python-dotenv = "1.0.0"
+pandas = "2.0.1"
+fastapi = "0.95.1"
+uvicorn = "0.22.0"
+langchain = "0.0.165"
+openai = "0.27.6"
+aleph-alpha-client = "3.1.0"
+PyPDF2 = "3.0.1"
+pycryptodome = "3.17"
+python-docx = "0.8.11"
+python-pptx = "0.6.21"
+duckduckgo-search = "2.9.3"
+
+
+[tool.poetry.dev-dependencies]
+pytest = "7.3.1"
+pre-commit = "3.3.1"
+
+
 [build-system]
-requires = [
-    "setuptools>=42",
-    "wheel"
-]
-build-backend = "setuptools.build_meta"
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
