--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ pycryptodome = "3.17"
 python-docx = "0.8.11"
 python-pptx = "0.6.21"
 duckduckgo-search = "2.9.3"
+openpyxl = "^3.1.2"
 
 
 [tool.poetry.dev-dependencies]
