--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,19 +10,17 @@ packages = [{include = "neat_ai_assistant"}]
 
 [tool.poetry.dependencies]
 python = "^3.11.4"
-python-dotenv = "1.0.0"
-pandas = "2.0.1"
-fastapi = "0.95.1"
-uvicorn = "0.22.0"
-langchain = "0.0.165"
-openai = "0.27.6"
-aleph-alpha-client = "3.1.0"
-PyPDF2 = "3.0.1"
-pycryptodome = "3.17"
-python-docx = "0.8.11"
-python-pptx = "0.6.21"
-duckduckgo-search = "2.9.3"
+python-dotenv = "^1.0.0"
+pandas = "^2.0.1"
+openai = "^0.27.6"
+aleph-alpha-client = "^3.1.0"
+PyPDF2 = "^3.0.1"
+pycryptodome = "^3.17"
+python-docx = "^0.8.11"
+python-pptx = "^0.6.21"
+duckduckgo-search = "^3.8.3"
 openpyxl = "^3.1.2"
+pydantic = "^2.0.2"
 
 
 [tool.poetry.dev-dependencies]
