--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ python-pptx = "^0.6.21"
 duckduckgo-search = "^3.8.3"
 openpyxl = "^3.1.2"
 pydantic = "^2.0.2"
+fastapi = "^0.100.0"
+uvicorn = "^0.22.0"
 
 
 [tool.poetry.dev-dependencies]
