Include token counting

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ fastapi = "^0.100.0"
 uvicorn = "^0.22.0"
 gradio = "^3.36.1"
 sse-starlette = "^1.6.1"
+tiktoken = "^0.4.0"
 
 
 [tool.poetry.dev-dependencies]
