--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ uvicorn = "^0.22.0"
 gradio = "^3.36.1"
 sse-starlette = "^1.6.1"
 tiktoken = "^0.4.0"
+geopy = "^2.3.0"
 
 
 [tool.poetry.dev-dependencies]
