--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,12 +1,27 @@
 repos:
-  - repo: https://github.com/google/yapf
-    rev: v0.31.0
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v3.4.0
     hooks:
-      - id: yapf
-        args: ["--style={based_on_style: google, indent_width: 4}"]
-
-  - repo: https://github.com/pre-commit/mirrors-autopep8
-    rev: v1.5.7  # Use the ref you want to point at
+      #    -   id: check-yaml
+      - id: check-json
+      - id: pretty-format-json
+        args:
+          - --autofix
+        exclude: ^tests/files/
+      - id: end-of-file-fixer
+        exclude: ^tests/files/
+      - id: trailing-whitespace
+        exclude: ^tests/files/
+  - repo: https://github.com/psf/black
+    rev: 22.3.0
     hooks:
-      - id: autopep8
-        args: ["--in-place", "--aggressive", "--aggressive"]
+      - id: black
+  #-   repo: https://gitlab.com/PyCQA/flake8
+  #    rev: '3.9.1'
+  #    hooks:
+  #    -   id: flake8
+  - repo: https://github.com/kynan/nbstripout
+    rev: 0.4.0
+    hooks:
+      - id: nbstripout
+        files: ".ipynb"
