--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,11 +23,11 @@ openpyxl = "^3.1.2"
 pydantic = "^2.0.2"
 fastapi = "^0.100.0"
 uvicorn = "^0.22.0"
-gradio = "^3.36.1"
 sse-starlette = "^1.6.1"
 tiktoken = "^0.4.0"
 geopy = "^2.3.0"
 bs4 = "^0.0.1"
+black = "^23.9.1"
 
 
 [tool.poetry.dev-dependencies]
