--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,26 +2,30 @@ repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v3.4.0
     hooks:
-      #    -   id: check-yaml
       - id: check-json
       - id: pretty-format-json
+        files: .json
         args:
           - --autofix
-        exclude: ^tests/files/
       - id: end-of-file-fixer
-        exclude: ^tests/files/
       - id: trailing-whitespace
-        exclude: ^tests/files/
+  - repo: https://github.com/pycqa/isort
+    rev: 5.12.0
+    hooks:
+      - id: isort
+        name: isort (python)
+        args: ["--profile", "black", "--filter-files"]
   - repo: https://github.com/psf/black
-    rev: 22.3.0
+    rev: 23.7.0
     hooks:
       - id: black
-  #-   repo: https://gitlab.com/PyCQA/flake8
-  #    rev: '3.9.1'
-  #    hooks:
-  #    -   id: flake8
   - repo: https://github.com/kynan/nbstripout
     rev: 0.4.0
     hooks:
       - id: nbstripout
         files: ".ipynb"
+  - repo: https://github.com/codespell-project/codespell
+    rev: v2.2.4
+    hooks:
+      - id: codespell
+        exclude: ^(poetry\.lock|react-ui/package-lock\.json)$
