--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,21 +5,13 @@ description = "An AI assistant that intellegently handles your data."
 authors = ["Niklas Finken <niklasfinken@me.com>"]
 license = "MIT"
 readme = "README.md"
-packages = [{include = "neat_ai_assistant"}]
+packages = [{from = "src", include = "neat_ai_assistant"}]
 
 
 [tool.poetry.dependencies]
 python = "^3.11.4"
 python-dotenv = "^1.0.0"
-pandas = "^2.0.1"
-openai = "^0.27.6"
-aleph-alpha-client = "^3.1.0"
-PyPDF2 = "^3.0.1"
-pycryptodome = "^3.17"
-python-docx = "^0.8.11"
-python-pptx = "^0.6.21"
 duckduckgo-search = "^3.8.3"
-openpyxl = "^3.1.2"
 pydantic = "^2.0.2"
 fastapi = "^0.100.0"
 uvicorn = "^0.22.0"
@@ -27,12 +19,20 @@ sse-starlette = "^1.6.1"
 tiktoken = "^0.4.0"
 geopy = "^2.3.0"
 bs4 = "^0.0.1"
-black = "^23.9.1"
+openai = "^1.3.5"
 
 
 [tool.poetry.dev-dependencies]
-pytest = "^7.3.1"
-pre-commit = "^3.3.1"
+mypy = "^1.6.1"
+types-beautifulsoup4 = "^4.12.0.7"
+types-requests = "^2.31.0.10"
+pytest = "*"
+black = "*"
+pre-commit = "*"
+
+[tool.mypy]
+files = "src,tests"
+strict = "True"
 
 
 [build-system]
