--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -19,7 +19,7 @@
     "eventsource": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "styled-components": "^6.0.4",
     "web-vitals": "^2.1.4"
   },
