--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,9 +17,13 @@ fastapi = "^0.100.0"
 uvicorn = "^0.22.0"
 sse-starlette = "^1.6.1"
 tiktoken = "^0.4.0"
-geopy = "^2.3.0"
-bs4 = "^0.0.1"
 openai = "^1.3.5"
+geopy = {version="^2.3.0", optional=true}
+bs4 = {version="^0.0.1", optional=true}
+
+
+[tool.poetry.extras]
+tool-extension = ["geopy", "bs4"]
 
 
 [tool.poetry.dev-dependencies]
